FIX - Promo panel spacing issue on mobile.

--- a/src/assets/toolkit/styles/6-components/_components.promo-panel.scss
+++ b/src/assets/toolkit/styles/6-components/_components.promo-panel.scss
@@ -201,6 +201,11 @@ $promo-max-width:   60em;
                         > div {
                             max-width: 100%;
 
+                            h1,
+                            h2 {
+                                font-size: 1.95em;
+                            }
+
                             p {
                                 padding-top: 3.5em;
                             }
